--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="Make Everyday Decisions Easier!"
+        android:text="Make Everyday Decisions Easier With Me!"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
